--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 NODE_ENV=dev
 SERVER_PORT=888
 DB_HOST=localhost
+DB_NAME=nextcloud
+DB_USER=nextcloud
+DB_PORT=3306
+DB_PASSWORD=vteit123456
+DB_DEBUG=true
