--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@types/koa": "^2.13.4",
     "@types/koa-router": "^7.4.4",
     "@types/log4js": "^2.3.5",
+    "@types/sequelize": "^4.28.10",
     "dotenv": "^10.0.0",
     "koa": "^2.13.4",
     "koa-router": "^10.1.1",
-    "log4js": "^6.3.0"
+    "log4js": "^6.3.0",
+    "sequelize": "^6.7.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.2",
     "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.6.4",
     "jest": "^27.3.1",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
